<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <repositories>
		<repository>
			<id>codehaus</id>
			<url>http://repository.codehaus.org/org/codehaus</url>
		</repository>
  	</repositories>
    
    
    <modelVersion>4.0.0</modelVersion>

    <groupId>responsum</groupId>
    <artifactId>test-framework</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <testng.version>6.8.21</testng.version>
        <selenium.version>2.45.0</selenium.version>
        <reportng.version>1.1.4</reportng.version>
        <inject.version>4.0-beta5</inject.version>
        <log4j-api.version>2.2</log4j-api.version>
        <log4j-core.version>2.2</log4j-core.version>
        <jackson-mapper.version>1.8.5</jackson-mapper.version>
    </properties>

    <build>
        <!-- Source directory configuration -->
        <sourceDirectory>src</sourceDirectory>
        <plugins>
        	<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>1.7</source>
                <target>1.7</target>
                <encoding>UTF-8</encoding>
        		<inputEncoding>UTF-8</inputEncoding>
       			 <outputEncoding>UTF-8</outputEncoding>
        		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
        		-Dfile.encoding=UTF-8</argLine>
            </configuration>
       		</plugin>
            <!-- Plugin to execute the testng tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                 	<reportsDirectory>${project.build.directory}/MYreports</reportsDirectory>
                    <!-- testng xml suite file to be used for test execution -->
                    <suiteXmlFiles>
                        <suiteXmlFile>testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
        	<plugins>
        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        		<plugin>
        			<groupId>org.eclipse.m2e</groupId>
        			<artifactId>lifecycle-mapping</artifactId>
        			<version>1.0.0</version>
        			<configuration>
        				<lifecycleMappingMetadata>
        					<pluginExecutions>
        						<pluginExecution>
        							<pluginExecutionFilter>
        								<groupId>
        									org.apache.maven.plugins
        								</groupId>
        								<artifactId>
        									maven-compiler-plugin
        								</artifactId>
        								<versionRange>
        									[2.5.1,)
        								</versionRange>
        								<goals>
        									<goal>testCompile</goal>
        								</goals>
        							</pluginExecutionFilter>
        							<action>
        								<ignore></ignore>
        							</action>
        						</pluginExecution>
        					</pluginExecutions>
        				</lifecycleMappingMetadata>
        			</configuration>
        		</plugin>
        	</plugins>
        </pluginManagement>
    </build>
    <dependencies>
    <dependency>
        <groupId>org.testng</groupId>
        <artifactId>testng</artifactId>
        <version>${testng.version}</version>
        <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>${selenium.version}</version>
    </dependency>
        <dependency>
            <groupId>org.uncommons</groupId>
            <artifactId>reportng</artifactId>
            <version>${reportng.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${inject.version}</version>
        </dependency>
		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-api</artifactId>
    		<version>${log4j-api.version}</version>
  		</dependency>
  		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-core</artifactId>
    		<version>${log4j-core.version}</version>
  		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson-mapper.version}</version>
		</dependency>
		<dependency>
  			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.3.6</version>
		</dependency>
		<dependency>
			  <groupId>org.apache.httpcomponents</groupId>
			  <artifactId>httpasyncclient</artifactId>
			  <version>4.0.2</version>
		</dependency>
		<dependency>
			  <groupId>org.apache.httpcomponents</groupId>
			  <artifactId>httpmime</artifactId>
			  <version>4.3.6</version>
		</dependency>
		<dependency>
			  <groupId>org.json</groupId>
			  <artifactId>json</artifactId>
			  <version>20140107</version>
		</dependency>
		<dependency>
		    <groupId>com.mashape.unirest</groupId>
		    <artifactId>unirest-java</artifactId>
		    <version>1.4.5</version>
		</dependency>
    	</dependencies>
</project>